# spam_bot

./: .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  no_afk.py
tests/: test_main.py
