[project]
name = ""
version = "0.0.1"
requires-python = "~=3.14.0"
dependencies = [
    "keyboard>=0.13.5",
    "pyautogui",
]

[tool.isort]
line_length = 119
profile = "black"
src_paths = ["app", "tests"]
multi_line_output = 3

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
show-fixes = true
line-length = 119
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",   # Class attribute {name} is shadowing a Python builtin
    "BLE001", # Do not catch blind exception: {name}
    "COM812", # Trailing comma missing
    "PD",     # pandas-vet
    "DTZ001", # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "DTZ003", # The use of `datetime.datetime.utcnow()` is not allowed, use `datetime.datetime.now(tz=)` instead
    "DTZ006", # The use of `datetime.datetime.fromtimestamp()` without `tz` argument is not allowed
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "FBT003", # Boolean positional value in function call
    "FIX00", # Line contains TODO
    "N802",   # Function name {name} should be lowercase
    "RET503", # Missing explicit `return` at the end of function able to return non-`None` value
    "RET505", # Unnecessary `else` after `return` statement
    "RET506", # Unnecessary `elif` after `raise` statement
    "S101",   # Use of `assert` detected
    "TD002",  # Missing author in TODO; try: # TODO(<author_name>): ...
    "TD003",  # Missing issue link on the line following this TODO
    "TRY003", # avoid specifying long messages outside the exception class
    "T201",   # Print statement used
    "D203",   # One-blank-line-before-class
    "D212",   # Multi-line-summary-first-line
    "D104", # Missing docstring in public package

]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.model_validator", "pydantic.validator"]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
python_version = "3.14"
mypy_path = './stubs'

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false
disable_error_code = [
    "arg-type",
    "call-arg"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
